--- a/ChatServer/ChatServer/ChatServer.csproj
+++ b/ChatServer/ChatServer/ChatServer.csproj
@@ -46,6 +46,7 @@
     <Compile Include="HandleClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
